# bb-scripts

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  NetscriptDefinitions.d.ts  README.md  build.mjs  build.ts  deno.jsonc  deno.ts  global.d.ts  lib.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.lib.json
all/: ram-allocator.js
doc/: Batcher.md  Commander.md  Dolphin.md  FapUI.md  Konsole.md  Plasma.md  RootGainer.md  ServerManager.md  ServerViewer.md  WindowApp.md  npm.md
funky/: test.ts
local/home/: .plasmaconf.json  plasma.js
src/: module.d.ts
src/Dolphin/: Dolphin.css  README.md  index.tsx
src/FapUI/: Table.ts  index.ts
src/Konsole/: Konsole.css  index.tsx
src/NetworkExplorer/: index.tsx
src/Plasma/: DesktopEnviroment.tsx  README.md  main.tsx
src/ServerManager/: ServerManager.css  index.tsx
src/ServerViewer/: index.tsx
src/Terminal/: index.tsx
src/bb-plasma/: DesktopEnviroment.tsx  declarations.d.ts  main.tsx
src/css/: FapTableTest.css
src/lib/: BitburnerDOM.ts  Context.tsx  FileSystem.ts  Hack.ts  Network.ts  System.ts  Terminal.ts  Types.d.ts  WindowApp.tsx  dynamic.ts  os.ts  result.ts  service.ts  stage.ts  util.ts
src/npm/: Require.ts  cli.ts
src/plasma/: main.tsx
src/rust/bindings/: Cargo.toml  Type.d.ts  check.rs
src/rust/bindings/src/: lib.rs
src/rust/bindings/src/macros/: Cargo.toml
src/rust/bindings/src/macros/src/: lib.rs
src/rust/bindings/src/macros/src/transform/: enum.rs  error.rs  expression.rs  function.rs  interface.rs  mod.rs  type.rs
src/rust/bindings/src/types/: any.rs  mod.rs
(+207 files in other folders)
